// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link displays arrow icon when \`arrow\` is specified 1`] = `
<Link
  arrow="arrow"
>
  <Component
    className="link"
    target={null}
  >
    <a
      className="link"
      target="_blank"
    >
      text
      <Icon
        className="arrow"
        icon="arrow"
      >
        <img
          className="arrow"
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </Icon>
    </a>
  </Component>
</Link>
`;

exports[`Link displays back arrow icon when \`backArrow\` is specified 1`] = `
<Link
  backArrow="arrow_darkBg"
>
  <Component
    className="link"
    target={null}
  >
    <a
      className="link"
      target="_blank"
    >
      <Icon
        className="backArrow"
        icon="arrow_darkBg"
      >
        <img
          className="backArrow"
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </Icon>
      text
    </a>
  </Component>
</Link>
`;

exports[`Link is active route 1`] = `
<Link
  activeClassName="active"
  to="/deployments"
>
  <NavLink
    activeClassName="active"
    aria-current="page"
    className="link"
    target={null}
    to="/deployments"
  >
    <Route
      path="\\\\/deployments"
    >
      <Link
        aria-current={null}
        className="link"
        replace={false}
        target={null}
        to="/deployments"
      >
        <a
          aria-current={null}
          className="link"
          href="/deployments"
          onClick={[Function]}
          target={null}
        >
          text
        </a>
      </Link>
    </Route>
  </NavLink>
</Link>
`;

exports[`Link is external url - http 1`] = `
<Link
  to="https://www.astronomer.io"
>
  <Component
    className="link"
    target={null}
    to="https://www.astronomer.io"
  >
    <a
      className="link"
      href="https://www.astronomer.io"
      target="_blank"
    >
      text
    </a>
  </Component>
</Link>
`;

exports[`Link is external url - naked 1`] = `
<Link
  to="astronomer.io"
>
  <Component
    className="link"
    target={null}
    to="astronomer.io"
  >
    <a
      className="link"
      href="astronomer.io"
      target="_blank"
    >
      text
    </a>
  </Component>
</Link>
`;

exports[`Link is external url - www 1`] = `
<Link
  to="www.astronomer.io"
>
  <Component
    className="link"
    target={null}
    to="www.astronomer.io"
  >
    <a
      className="link"
      href="www.astronomer.io"
      target="_blank"
    >
      text
    </a>
  </Component>
</Link>
`;

exports[`Link is internal route - no slash 1`] = `
<Link
  to="deployments"
>
  <Link
    className="link"
    replace={false}
    target={null}
    to="deployments"
  >
    <a
      className="link"
      href="deployments"
      onClick={[Function]}
      target={null}
    >
      text
    </a>
  </Link>
</Link>
`;

exports[`Link is internal route - with slash 1`] = `
<Link
  to="/deployments"
>
  <Link
    className="link"
    replace={false}
    target={null}
    to="/deployments"
  >
    <a
      className="link"
      href="/deployments"
      onClick={[Function]}
      target={null}
    >
      text
    </a>
  </Link>
</Link>
`;

exports[`Link renders correctly 1`] = `
<Link>
  <Component
    className="link"
    target={null}
  >
    <a
      className="link"
      target="_blank"
    >
      text
    </a>
  </Component>
</Link>
`;
